# mcp-text-editor

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  test_hash_fix.py
.github/workflows/: publish.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
mcp_text_editor/: __main__.py  models.py  server.py  service.py  text_editor.py
patches/: 0001-P0-path-validation-secure-hash-compare-file-locking-.patch
scripts/: validate_commit_message_ascii.py
src/mcp_text_editor/: __init__.py  errors.py  models.py  schema_compat.py  server.py  server.py.bak  service.py  text_editor.py  utils.py
src/mcp_text_editor/handlers/: __init__.py  append_text_file_contents.py  base.py  create_text_file.py  delete_text_file_contents.py  edit_text_file_contents.py  get_text_file_contents.py  insert_text_file_contents.py  patch_text_file_contents.py
tests/: conftest.py  test_append_text_file.py  test_create_error_response.py  test_create_text_file.py  test_delete_file_contents.py  test_delete_text_file.py  test_error_hints.py  test_insert_text_file.py  test_insert_text_file_handler.py  test_models.py  test_patch_text_file.py  test_patch_text_file_end_none.py  test_path_validation.py  test_schema_compat.py  test_server.py  test_service.py  test_text_editor.py  test_validator.py
